# commenter-scraper

./: Cargo.toml  Dockerfile
content-scraper/: Cargo.toml
content-scraper/assets/: verge-article.html
content-scraper/src/: content_scraper.rs  lib.rs
scraper-service/: .gitignore  Cargo.toml  build.rs
scraper-service/src/: main.rs  scraper_service.rs
